<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.junaid.demotestmma.activity.CameraActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginBottom="@dimen/margin_80"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="350dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvImageAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10"
            android:background="@drawable/border"
            android:text="Img address"
            android:textColor="@color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_5"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button1"
            android:background="@color/button2"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Button1"
            android:background="@drawable/round_corner_red"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button1"
            android:background="@drawable/round_corner_red"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:padding="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>
